Add Font Awesome icons to service cards and improve layout styling

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
         <h2>Our Services</h2>
         <div class="services-list">
           <div class="service-card">
+            <div class="card-icon">
+              <i
+                class="fa fa-building"
+                style="font-size: 2rem; color: #3949ab"
+              ></i>
+            </div>
             <h3>Corporate Law</h3>
             <p>
               Comprehensive legal support for corporate governance, mergers,
@@ -62,6 +68,12 @@
             </p>
           </div>
           <div class="service-card">
+            <div class="card-icon">
+              <i
+                class="fa fa-lightbulb"
+                style="font-size: 2rem; color: #fbc02d"
+              ></i>
+            </div>
             <h3>Intellectual Property</h3>
             <p>
               Protect your ideas and innovations with our IP registration,
@@ -69,6 +81,12 @@
             </p>
           </div>
           <div class="service-card">
+            <div class="card-icon">
+              <i
+                class="fa fa-balance-scale"
+                style="font-size: 2rem; color: #1a237e"
+              ></i>
+            </div>
             <h3>Litigation Support</h3>
             <p>
               Strategic advice and representation for civil, commercial, and
@@ -76,6 +94,12 @@
             </p>
           </div>
           <div class="service-card">
+            <div class="card-icon">
+              <i
+                class="fa fa-shield-alt"
+                style="font-size: 2rem; color: #3949ab"
+              ></i>
+            </div>
             <h3>Compliance & Regulatory Affairs</h3>
             <p>
               Stay ahead of regulations with tailored compliance programs and
@@ -91,28 +115,50 @@
         <div class="why-card">
           <img src="./images/bra-legal-sys.png" alt="Brazil Legal System" />
           <div>
-            <p>
+            <p style="margin-bottom: 1.5rem">
               Navigating the Brazilian legal system can be complex and
-              challenging for both local and international businesses. With
-              frequent regulatory changes, intricate bureaucracy, and unique
-              labor and tax laws, having a strong legal partner is essential for
-              success.
+              challenging for both local and international businesses.<br />
+              With frequent regulatory changes, intricate bureaucracy, and
+              unique labor and tax laws, having a strong legal partner is
+              essential for success.
             </p>
-            <p>
+            <p style="margin-bottom: 2rem">
               At Lex Vertex Legal Consulting, we help you overcome these
               challenges by providing clear guidance, proactive risk management,
-              and strategic solutions tailored to your needs. Our team
-              understands the nuances of Brazilian law and is committed to
-              protecting your interests, ensuring compliance, and enabling your
-              growth.
+              and strategic solutions tailored to your needs.<br />
+              Our team understands the nuances of Brazilian law and is committed
+              to protecting your interests, ensuring compliance, and enabling
+              your growth.
             </p>
-            <ul>
-              <li>Expertise in Brazilian regulations and business practices</li>
-              <li>Proactive approach to legal risk and compliance</li>
-              <li>
+            <ul style="list-style: none; padding: 0">
+              <li style="margin-bottom: 1rem">
+                <i
+                  class="fa fa-gavel"
+                  style="color: #3949ab; margin-right: 8px"
+                ></i>
+                Expertise in Brazilian regulations and business practices
+              </li>
+              <li style="margin-bottom: 1rem">
+                <i
+                  class="fa fa-shield-alt"
+                  style="color: #fbc02d; margin-right: 8px"
+                ></i>
+                Proactive approach to legal risk and compliance
+              </li>
+              <li style="margin-bottom: 1rem">
+                <i
+                  class="fa fa-globe"
+                  style="color: #1a237e; margin-right: 8px"
+                ></i>
                 Support for international clients entering the Brazilian market
               </li>
-              <li>Transparent communication and reliable partnership</li>
+              <li>
+                <i
+                  class="fa fa-comments"
+                  style="color: #3949ab; margin-right: 8px"
+                ></i>
+                Transparent communication and reliable partnership
+              </li>
             </ul>
           </div>
         </div>
@@ -123,17 +169,41 @@
         <div class="about-content">
           <img src="./images/team-working-2.png" alt="Lex Vertex Team" />
           <div>
-            <p>
+            <p style="margin-bottom: 1.5rem">
               Lex Vertex Legal Consulting is a team of experienced lawyers
-              dedicated to providing high-quality legal advice and solutions.
+              dedicated to providing high-quality legal advice and solutions.<br />
               Our mission is to empower clients with clarity and confidence in
               their legal matters.
             </p>
-            <ul>
-              <li>Decades of combined experience</li>
-              <li>Client-focused approach</li>
-              <li>Transparent communication</li>
-              <li>Results-driven strategies</li>
+            <ul style="list-style: none; padding: 0">
+              <li style="margin-bottom: 1rem">
+                <i
+                  class="fa fa-briefcase"
+                  style="color: #3949ab; margin-right: 8px"
+                ></i>
+                Decades of combined experience
+              </li>
+              <li style="margin-bottom: 1rem">
+                <i
+                  class="fa fa-user-check"
+                  style="color: #fbc02d; margin-right: 8px"
+                ></i>
+                Client-focused approach
+              </li>
+              <li style="margin-bottom: 1rem">
+                <i
+                  class="fa fa-comments"
+                  style="color: #1a237e; margin-right: 8px"
+                ></i>
+                Transparent communication
+              </li>
+              <li>
+                <i
+                  class="fa fa-bullseye"
+                  style="color: #3949ab; margin-right: 8px"
+                ></i>
+                Results-driven strategies
+              </li>
             </ul>
           </div>
         </div>
